feat(live):添加初始化创建直播间信息功能